<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientorange"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <ImageView
        android:layout_width="396dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:src="@drawable/ic_shopping_cart_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@color/titcolor"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@color/colorgreenwa"
        android:textSize="30dp"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/emaillogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:baselineAligned="false"
        android:hint="Username"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="Password" />

    <Button
        android:id="@+id/buttonsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@drawable/capbtn"
        android:hint="@string/login"
        android:textColor="@color/Black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp">

        <Button
            android:padding="@dimen/_5sdp"
            android:layout_margin="@dimen/_5sdp"
            android:id="@+id/btnforgot"
            android:layout_width="151dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_toStartOf="@+id/btnSignUp"
            android:layout_toLeftOf="@+id/btnSignUp"
            android:background="@drawable/capbtn"
            android:bottomRightRadius="@dimen/_10sdp"
            android:text="Forgot Password??" />

        <Button
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:id="@+id/btnSignUp"
            android:layout_width="199dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/capbtn"
            android:text="Sign Up" />


    </RelativeLayout>

    <TextView
        android:id="@+id/btncontactus"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="#FFAA6E"
        android:bottomRightRadius="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/Contactus"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />



    </LinearLayout>
